unpackaged/main/default/objects/Umbrella_Beneficiary__c/Umbrella_Beneficiary__c.object-meta.xml
<CustomObject>
    <description>This object is for capturing an Accounts membership to an Umbrella Group.</description>
    <label>Umbrella Beneficiary</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Umbrella Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>