unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Part of Umbrella Groups</relationshipLabel>
    <relationshipName>Umbrella_Beneficiaries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>