unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Date_Linked_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Date_Linked_to_Group__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This field populates when an Umbrella Beneficiary is linked to a group.</description>
    <label>Date Linked to Group</label>
    <type>Date</type>
</CustomField>