unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Date_Removed_From_Group__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_From_Group__c</fullName>
    <inlineHelpText>This field is set to the day the Status is set to &quot;Inactive&quot;</inlineHelpText>
    <label>Date Removed From Group</label>
    <type>Date</type>
</CustomField>