unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <description>CCRM15-230 - Is populated by the users who can currently edit umbrella beneficiary information.</description>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>