unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Umbrella_Group__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Group__c</fullName>
    <description>A lookup to the related Umbrella Group.</description>
    <label>Umbrella Group</label>
    <referenceTo>Umbrella_Group__c</referenceTo>
    <relationshipLabel>Umbrella Beneficiaries</relationshipLabel>
    <relationshipName>Umbrella_Beneficiaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>