unpackaged/main/default/objects/Umbrella_Beneficiary__c/fields/Umbrella_Group_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Group_Parent_Account__c</fullName>
    <description>This field pulls in the Umbrella Group Parent Account Name. This is used in email templates.</description>
    <formula>Umbrella_Group__r.Umbrella_Parent__r.Name</formula>
    <label>Umbrella Group Parent Account</label>
    <type>Text</type>
</CustomField>