unpackaged/main/default/objects/Umbrella_Beneficiary__c/validationRules/Cannot_Select_InactiveTerminated_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Select_InactiveTerminated_Account</fullName>
    <active>true</active>
    <description>Ensures an Inactive/Terminated Account cannot be associated to the Umbrella Beneficiary</description>
    <errorConditionFormula>AND(
NOT( Account__r.RecordType.Name = &quot;Person Account&quot;),
!ISNULL(  Account__c    ),
OR(
ISNEW(),
ISCHANGED( Account__c  )),
OR(
ISPICKVAL(Account__r.Account_Status__c,&quot;Inactive&quot;),
ISPICKVAL(Account__r.Account_Status__c , &quot;Terminated&quot;)
),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorMessage>You cannot relate an Inactive or Terminated Account</errorMessage>
</ValidationRule>